--- a/stylesheets/my-package.less
+++ b/stylesheets/my-package.less
@@ -4,5 +4,25 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.my-package {
+.php-getters-setters.overlay .var-list{
+    border: 1px solid @text-color;
+    list-style: none;
+    padding: 5px;
+}
+.php-getters-setters.overlay .var-list li{
+    margin: 0;
+    padding: 0;
+    margin-bottom: 5px;
+    margin-left: 5px;
+}
+.php-getters-setters.overlay .var-list li input{
+    margin-right: 5px;
+}
+
+.php-getters-setters.overlay footer {
+    margin-top: 20px;
+}
+
+.php-getters-setters.overlay footer .secondary{
+    float: right
 }
