--- a/stylesheets/my-package.less
+++ b/stylesheets/my-package.less
@@ -9,6 +9,9 @@
     background: @pane-item-background-color;
     list-style: none;
     padding: 5px;
+    height: 300px;
+    max-height: 300px;
+    overflow: auto;
 }
 .php-getters-setters.overlay .var-list li{
     margin: 0;
