--- a/styles/my-package.less
+++ b/styles/my-package.less
@@ -4,7 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.php-getters-setters.overlay .var-list{
+.php-getters-setters .var-list{
     border: 1px solid @pane-item-border-color;
     background: @pane-item-background-color;
     width: 100%;
@@ -14,40 +14,40 @@
     overflow: auto;
     margin-bottom: 10px;
 }
-.php-getters-setters.overlay .var-list td{
+.php-getters-setters .var-list td{
         padding-right: 10px;
         padding-bottom: 5px;
 }
 
-.php-getters-setters.overlay .var-list td *{
+.php-getters-setters .var-list td *{
     cursor: pointer;
 }
-.php-getters-setters.overlay .var-list tr:hover{
+.php-getters-setters .var-list tr:hover{
     background: @background-color-highlight;
     width: 100%;
 }
 
 
-.php-getters-setters.overlay footer {
+.php-getters-setters footer {
     margin-top: 20px;
 }
 
-.php-getters-setters.overlay button {
+.php-getters-setters button {
     background: @button-background-color;
     border-color: @base-border-color;
 }
-.php-getters-setters.overlay button:hover {
+.php-getters-setters button:hover {
     background: @button-background-color-hover;
 }
-.php-getters-setters.overlay footer .secondary{
+.php-getters-setters footer .secondary{
     float: right
 }
 
-.php-getters-setters.overlay #chk_accessor_setter ,
-.php-getters-setters.overlay #chk_accessor_getter {
+.php-getters-setters #chk_accessor_setter ,
+.php-getters-setters #chk_accessor_getter {
     margin-right: 5px;
 }
 
-.php-getters-setters.overlay #chk_accessor_setter {
+.php-getters-setters #chk_accessor_setter {
     margin-left: 30px;
 }
